# BartmossCloud

./: .gitignore  CMakeLists.txt  ClientConstruct.c  LinkedList.cpp  LinkedList.h  MainClient.c  README.md  client.c  client.h  createAccountWindow.cpp  createAccountWindow.h  create_account_page.cpp  create_account_page.h  create_account_page.ui  createaccountwindow.ui  dealwithDB.c  dealwithDB.h  directForGui.c  editAccountDatabase.cpp  editAccountDatabase.h  fifomkr  fileHelpers.h  fileLocationFunctions.h  importantFileLocations.c  importantFileLocations.h  logging.c  logging.h  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  makeFIFO.cpp  makeFIFO.h  multiThreading.c  multiThreading.cpp  receiving.c  runSetup.cpp  (+4 more)
C/: BartmossCloud  Client  ClientConstruct.c  LinkedList.c  LinkedList.h  Makefile  client.c  client.h  directory.c  fileHelpers.h  multiThreading.c  piping  receiving.c  sending.c
ServerFiles/: CMakeLists.txt  MainServer.c  ServerConstruct.c  dataBase.c  dataBase.h  directory.c  fileHelpers.h  getLocations.c  logging.c  receiving.c  sending.c  server.h
ServerFiles/Encryption/: SHA256.c  SHA256.h
